--- a/README
+++ b/README
@@ -2,6 +2,10 @@ XML_Atom
 
 Author : JEMBA Chrislain
 
-Library to easily handle atom feeds. You could easily :
+Library to easily handle atom feeds. You could :
 - convert an atom feed (xml) into a php object
 - convert a php object into an atom feed
+
+Before using this library, I advise you to have a look at the atom syndication format :
+http://www.atomenabled.org/developers/syndication/atom-format-spec.php
+
